--- a/numerals-base.cabal
+++ b/numerals-base.cabal
@@ -5,15 +5,25 @@ build-type:    Simple
 stability:     experimental
 author:        Roel van Dijk <vandijk.roel@gmail.com>, Bas van Dijk <v.dijk.bas@gmail.com>
 maintainer:    Roel van Dijk <vandijk.roel@gmail.com>
-copyright:     2009—2011 Roel van Dijk, Bas van Dijk
+copyright:     2009–2011 Roel van Dijk, Bas van Dijk
 license:       BSD3
 license-file:  LICENSE
 homepage:      https://github.com/roelvandijk/numerals-base
 bug-reports:   https://github.com/roelvandijk/numerals-base/issues
 category:      Natural Language Processing, Numerical, Text
 synopsis:      Convert numbers to number words
-description:   See the @numerals@ package for numerous examples.
-extra-source-files: ./TODO, ./LICENSE
+description:
+  This package contains machinery to construct functions that convert
+  numbers to number words. It allows you to write a function which
+  converts a number like 142 to the string \"one hundred and
+  forty-two\".
+  .
+  The documentation for the "Text.Numeral" module contains an high
+  level overview of the package.
+  .
+  See the @numerals@ package for numerous examples.
+
+extra-source-files: ./TODO, ./README.markdown
 
 -------------------------------------------------------------------------------
 
@@ -27,8 +37,8 @@ library
   hs-source-dirs: src
   ghc-options: -Wall
 
-  build-depends: base                       >= 3.0.3.1 && < 4.4
-               , base-unicode-symbols       >= 0.1.1   && < 0.3
+  build-depends: base                       >= 3.0.3.1 && < 4.5
+               , base-unicode-symbols       >= 0.2.2   && < 0.3
                , containers                 >= 0.4     && < 0.5
                , containers-unicode-symbols >= 0.3     && < 0.4
                , fingertree                 >= 0.0.1   && < 0.1
@@ -49,12 +59,11 @@ test-suite test-numerals
   hs-source-dirs: src, test
   ghc-options: -Wall
 
-  build-depends: base                       >= 3.0.3.1 && < 4.4
-               , base-unicode-symbols       >= 0.1.1   && < 0.3
+  build-depends: base                       >= 3.0.3.1 && < 4.5
+               , base-unicode-symbols       >= 0.2.2   && < 0.3
                , containers                 >= 0.4     && < 0.5
                , containers-unicode-symbols >= 0.3     && < 0.4
                , fingertree                 >= 0.0.1   && < 0.1
                , HUnit                      >= 1.2.2   && < 1.3
-               , test-framework             >= 0.3.3   && < 0.4
+               , test-framework             >= 0.3.3   && < 0.5
                , test-framework-hunit       >= 0.2.6   && < 0.3
-
