Fast integral logarithm using integer-gmp

--- a/numerals-base.cabal
+++ b/numerals-base.cabal
@@ -45,6 +45,7 @@ library
                , containers                 >= 0.4     && < 0.5
                , containers-unicode-symbols >= 0.3     && < 0.4
                , fingertree                 >= 0.0.1   && < 0.1
+               , integer-gmp                >= 0.3     && < 0.4
 
   exposed-modules: Text.Numeral
                  , Text.Numeral.BigNum
