Support for inflection. This changes the types of just about everything! - Renamed Text.Numeral.Exp to Text.Numeral.Exp.Reified - Renamed Text.Numeral.Exp.Classes to Text.Numeral.Exp - Reified expressions can now contain functions and have no more Show   and Eq instances.

--- a/numerals-base.cabal
+++ b/numerals-base.cabal
@@ -52,7 +52,9 @@ library
   exposed-modules: Text.Numeral
                  , Text.Numeral.BigNum
                  , Text.Numeral.Exp
-                 , Text.Numeral.Exp.Classes
+                 , Text.Numeral.Exp.Reified
+                 , Text.Numeral.Grammar
+                 , Text.Numeral.Grammar.Reified
                  , Text.Numeral.Misc
                  , Text.Numeral.Render
                  , Text.Numeral.Rules
