--- a/numerals-base.cabal
+++ b/numerals-base.cabal
@@ -40,14 +40,14 @@ library
   hs-source-dirs: src
   ghc-options: -Wall
 
-  build-depends: base                       >= 3.0.3.1 && < 4.5
+  build-depends: base                       >= 3.0.3.1 && < 4.6
                , base-unicode-symbols       >= 0.2.2   && < 0.3
                , containers                 >= 0.4     && < 0.5
                , containers-unicode-symbols >= 0.3     && < 0.4
                , fingertree                 >= 0.0.1   && < 0.1
 
   if impl(ghc >= 7.2.1)
-    build-depends: integer-gmp >= 0.3 && < 0.4
+    build-depends: integer-gmp >= 0.3 && < 0.5
 
   exposed-modules: Text.Numeral
                  , Text.Numeral.BigNum
@@ -61,17 +61,17 @@ library
 
 -------------------------------------------------------------------------------
 
-test-suite test-numerals
+test-suite test-numerals-base
   type: exitcode-stdio-1.0
   main-is: test.hs
   hs-source-dirs: src, test
   ghc-options: -Wall
 
-  build-depends: base                       >= 3.0.3.1 && < 4.5
+  build-depends: base                       >= 3.0.3.1 && < 4.6
                , base-unicode-symbols       >= 0.2.2   && < 0.3
                , containers                 >= 0.4     && < 0.5
                , containers-unicode-symbols >= 0.3     && < 0.4
                , fingertree                 >= 0.0.1   && < 0.1
                , HUnit                      >= 1.2.2   && < 1.3
-               , test-framework             >= 0.3.3   && < 0.5
+               , test-framework             >= 0.3.3   && < 0.6
                , test-framework-hunit       >= 0.2.6   && < 0.3
