--- a/numerals-base.cabal
+++ b/numerals-base.cabal
@@ -64,14 +64,14 @@ library
 test-suite test-numerals-base
   type: exitcode-stdio-1.0
   main-is: test.hs
-  hs-source-dirs: src, test
+  hs-source-dirs: test
   ghc-options: -Wall
 
   build-depends: base                       >= 3.0.3.1 && < 4.6
                , base-unicode-symbols       >= 0.2.2   && < 0.3
-               , containers                 >= 0.4     && < 0.5
-               , containers-unicode-symbols >= 0.3     && < 0.4
-               , fingertree                 >= 0.0.1   && < 0.1
+               , numerals-base              == 0.4
                , HUnit                      >= 1.2.2   && < 1.3
+               , QuickCheck                 >= 2.4.2   && < 2.5
                , test-framework             >= 0.3.3   && < 0.6
                , test-framework-hunit       >= 0.2.6   && < 0.3
+               , test-framework-quickcheck2 >= 0.2.12  && < 0.3
