--- a/numerals-base.cabal
+++ b/numerals-base.cabal
@@ -18,7 +18,7 @@ description:
   converts a number like 142 to the string \"one hundred and
   forty-two\".
   .
-  The documentation for the "Text.Numeral" module contains an high
+  The documentation for the "Text.Numeral" module contains a high
   level overview of the package.
   .
   If you just want to convert numbers to number words in a specific
@@ -42,12 +42,12 @@ library
 
   build-depends: base                       >= 3.0.3.1 && < 4.7
                , base-unicode-symbols       >= 0.2.2   && < 0.3
-               , containers                 >= 0.4     && < 0.5
+               , containers                 >= 0.4     && < 0.6
                , containers-unicode-symbols >= 0.3     && < 0.4
-               , fingertree                 >= 0.0.1   && < 0.1
+               , fingertree                 >= 0.0.1   && < 0.2
 
   if impl(ghc >= 7.2.1)
-    build-depends: integer-gmp >= 0.3 && < 0.5
+    build-depends: integer-gmp >= 0.3 && < 0.6
 
   exposed-modules: Text.Numeral
                  , Text.Numeral.BigNum
@@ -67,11 +67,11 @@ test-suite test-numerals-base
   hs-source-dirs: src-test
   ghc-options: -Wall
 
-  build-depends: base                       >= 3.0.3.1 && < 4.6
+  build-depends: base                       >= 3.0.3.1 && < 4.7
                , base-unicode-symbols       >= 0.2.2   && < 0.3
                , numerals-base              == 0.4
                , HUnit                      >= 1.2.2   && < 1.3
-               , QuickCheck                 >= 2.4.2   && < 2.5
-               , test-framework             >= 0.3.3   && < 0.7
-               , test-framework-hunit       >= 0.2.6   && < 0.3
-               , test-framework-quickcheck2 >= 0.2.12  && < 0.3
+               , QuickCheck                 >= 2.4.2   && < 2.7
+               , test-framework             >= 0.3.3   && < 0.9
+               , test-framework-hunit       >= 0.2.6   && < 0.4
+               , test-framework-quickcheck2 >= 0.2.12  && < 0.4
